# template

./: .gitignore  LAUNCHER.sh  README.md  RULES.md  USAGE.md  backend  frontend  in  package.json  rust  setup.sh  src  taku-start.lisp  webpack.config.js
.github/workflows/: backend.yml  frontend-bitcrusher.yml  frontend-modular.yml  frontend-tuner.yml  frontend.yml  lisp.yml  rust.yml
A-ante/: origin.sh  package-lock.json  package.json  webpack.config.js
T-tempus/V-vitro/: Cargo.toml
T-tempus/V-vitro/crates/taku_cli/: Cargo.toml
T-tempus/V-vitro/crates/taku_dsp/: Cargo.toml
T-tempus/V-vitro/crates/taku_dsp/src/: lib.rs
T-tempus/V-vitro/taku_cli/: Cargo.toml
T-tempus/V-vitro/taku_dsp/: Cargo.toml
adjacent/: Cargo.toml
adjacent/crates/taku_cli/: Cargo.toml
antefinem/src/: App.jsx  bitcrusher.jsx  modular.jsx  tuner.jsx
antefinem/src/components/: BitcrusherModule.jsx  ModularApp.jsx  TunerModule.jsx
app/: main.py
backend/app/: main.py
config/: main.lisp  taku-codegen.lisp  taku-config.lisp  taku-core.lisp  taku-modules.lisp  taku-start.lisp
crates/taku_cli/: Cargo.toml
crates/taku_cli/src/: main.rs
crates/taku_dsp/: Cargo.toml
crates/taku_dsp/src/: lib.rs
desktop/crates/taku_cli/src/: main.rs
examples/: README.md
examples/logarithmix-non-linear-amplitude-curve/: main.js
examples/taku-compiler-basic-usage/: README.md  basic-usage.ts
frontend/in/: index.html
meta/taku_cli/: Cargo.toml
src/: BitcrusherApp.jsx  TunerApp.jsx
tests/: launcher_test.lisp
