[package]
name = "taku_cli"
version = "0.1.0"
edition = "2021"
description = "Command-line interface for Taku audio processing modules"

[dependencies]
clap = { version = "4", features = ["derive"] }
taku_dsp = { path = "../taku_dsp" }
winit = "0.30"
wry = "0.52.1"

[[bin]]
name = "dev_view"
path = "src/bin/dev_view.rs"
